
  . "pdflatex": as above, but use ISABELLE_PDFLATEX (legacy mode for
    special LaTeX styles)

  . "build": delegate to the executable "./build pdf", using
    ISABELLE_LUALATEX by default

The presence of a "build" command within the document output directory
explicitly requires document_build=build. Minor INCOMPATIBILITY, need to
adjust session ROOT options.

* Improved LaTeX typesetting of \<open>...\<close> using \guilsinglleft ...
\guilsinglright. INCOMPATIBILITY, need to use \usepackage[T1]{fontenc}
(which is now also the default in "isabelle mkroot").

* Simplified typesetting of \<guillemotleft>...\<guillemotright> using \guillemotleft ...
\guillemotright from \usepackage[T1]{fontenc} --- \usepackage{babel} is
no longer required.


*** HOL ***

* Theory Multiset: dedicated predicate "multiset" is gone, use
explict expression instead.  Minor INCOMPATIBILITY.

* Theory Multiset: consolidated abbreviations Mempty, Melem, not_Melem
to empty_mset, member_mset, not_member_mset respectively.  Minor
INCOMPATIBILITY.

* Theory Multiset: consolidated operation and fact names:
    inf_subset_mset ~> inter_mset
    sup_subset_mset ~> union_mset
    multiset_inter_def ~> inter_mset_def
    sup_subset_mset_def ~> union_mset_def
    multiset_inter_count ~> count_inter_mset
    sup_subset_mset_count ~> count_union_mset

* Theory Multiset: syntax precendence for membership operations has been
adjusted to match the corresponding precendences on sets.  Rare
INCOMPATIBILITY.

* HOL-Analysis/HOL-Probability: indexed products of discrete
distributions, negative binomial distribution, Hoeffding's inequality,
Chernoff bounds, Cauchy–Schwarz inequality for nn_integral, and some
more small lemmas. Some theorems that were stated awkwardly before were
corrected. Minor INCOMPATIBILITY.

* Theorems "antisym" and "eq_iff" in class "order" have been renamed to
"order.antisym" and "order.eq_iff", to coexist locally with "antisym"