@@ -4,7 +4,6 @@ set -e
 
 FORMAT="$1"
 
-isabelle latex -o sty
 cp "$ISABELLE_HOME/src/Doc/pdfsetup.sty" .
 
 isabelle latex -o "$FORMAT"
@@ -13,4 +12,3 @@ isabelle latex -o bbl
 isabelle latex -o "$FORMAT"
 [ -f root.out ] && "$ISABELLE_HOME/src/Doc/fixbookmarks" root.out
 isabelle latex -o "$FORMAT"
-
